--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.2.1",
     "firebase": "^4.11.0",
+    "highlight.js": "^9.12.0",
+    "js-beautify": "^1.7.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-highlight.js": "^1.0.7",
     "react-scripts": "1.1.1"
   },
   "scripts": {
