--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "ajv": "^6.2.1",
+    "brace": "^0.11.1",
+    "element-react": "^1.4.8",
+    "element-theme-default": "^1.4.13",
     "firebase": "^4.11.0",
-    "highlight.js": "^9.12.0",
-    "js-beautify": "^1.7.5",
     "react": "^16.2.0",
+    "react-ace": "^5.9.0",
     "react-dom": "^16.2.0",
-    "react-highlight.js": "^1.0.7",
-    "react-scripts": "1.1.1"
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
