--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "history": "^4.7.2",
     "react": "^16.2.0",
     "react-ace": "^5.9.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
+    "react-firebaseui": "^1.1.9",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
