--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "string-to-color": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
